# Rusty-Discord-Mirrorbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile
src/: main.rs
