[package]
name = "rusty-discord-mirrorbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
